[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/UI/SettingsHeader.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/rexlia rg.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/grabble-whit.png" type="Texture" id=3]
[ext_resource path="res://Scripts/UI/Configs.gd" type="Script" id=4]
[ext_resource path="res://Sprites/grabble-green.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Settings/AudioSettings.gd" type="Script" id=6]
[ext_resource path="res://Fonts/TutorialFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Sprites/Icons/Keyboard&Mouse/Dark/Backspace_Alt_Key_Dark.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 20
border_width_top = 20
border_width_right = 30
border_width_bottom = 20
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.498039, 0.894118, 0.388235, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 1
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.498039, 0.894118, 0.388235, 1 )
border_width_left = 10
border_width_top = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsHeader" parent="." instance=ExtResource( 1 )]

[node name="GeneralTab" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioTab" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="Control" parent="AudioTab"]
margin_left = 151.0
margin_top = 255.0
margin_right = 760.0
margin_bottom = 415.0
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterLabel" type="Label" parent="AudioTab/VBoxContainer"]
margin_left = 311.25
margin_top = -3.05176e-05
margin_right = 920.25
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
text = "Master Volume   100%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterSlider" type="HSlider" parent="AudioTab/VBoxContainer"]
margin_left = 1201.25
margin_top = -21.25
margin_right = 1810.25
margin_bottom = 75.75
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="Control" parent="AudioTab"]
margin_left = 151.0
margin_top = 470.0
margin_right = 760.0
margin_bottom = 630.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="MusicLabel" type="Label" parent="AudioTab/VBoxContainer2"]
margin_left = 311.25
margin_top = -20.0
margin_right = 920.25
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Music Volume     100%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="AudioTab/VBoxContainer2"]
margin_left = 1201.25
margin_top = -52.5
margin_right = 1810.25
margin_bottom = 44.5
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer3" type="Control" parent="AudioTab"]
margin_left = 151.0
margin_top = 638.0
margin_right = 760.0
margin_bottom = 798.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="SfxLabel" type="Label" parent="AudioTab/VBoxContainer3"]
margin_left = 311.25
margin_top = 13.7499
margin_right = 920.25
margin_bottom = 72.7499
custom_fonts/font = SubResource( 1 )
text = "Sfx Volume         100%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SfxSlider" type="HSlider" parent="AudioTab/VBoxContainer3"]
margin_left = 1201.25
margin_top = -9.15527e-05
margin_right = 1810.25
margin_bottom = 96.9999
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoTab" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputsTab" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
margin_left = 1492.0
margin_top = 935.0
margin_right = 1592.0
margin_bottom = 1035.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 1600.0
margin_top = 963.0
margin_right = 1785.0
margin_bottom = 1026.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]Back[/center]"
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="AudioTab" to="AudioTab" method="_on_AudioTab_visibility_changed"]
[connection signal="value_changed" from="AudioTab/VBoxContainer/MasterSlider" to="AudioTab" method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="AudioTab/VBoxContainer2/MusicSlider" to="AudioTab" method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="AudioTab/VBoxContainer3/SfxSlider" to="AudioTab" method="_on_SfxSlider_value_changed"]
